# coro_actor_client

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: annotated.html  classcoro__actor__client-members.html  classcoro__actor__client.html  classcoro__actor__reply-members.html  classcoro__actor__reply.html  classes.html  coro__actor__client_8h.html  coro__actor__client_8h__incl.map  coro__actor__client_8h__incl.md5  coro__actor__client_8h_source.html  coro__actor__reply_8h.html  coro__actor__reply_8h__dep__incl.map  coro__actor__reply_8h__dep__incl.md5  coro__actor__reply_8h__incl.map  coro__actor__reply_8h__incl.md5  coro__actor__reply_8h_source.html  coro__actor__types_8h.html  coro__actor__types_8h__dep__incl.map  coro__actor__types_8h__dep__incl.md5  coro__actor__types_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_func.html  globals.html  globals_defs.html  globals_enum.html  globals_type.html  graph_legend.html  index.html  menudata.js
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  (+25 more)
docs/latex/: annotated.tex  classcoro__actor__client.tex  classcoro__actor__reply.tex  coro__actor__client_8h.tex  coro__actor__client_8h__incl.md5  coro__actor__reply_8h.tex  coro__actor__reply_8h__dep__incl.md5  coro__actor__reply_8h__incl.md5  coro__actor__types_8h.tex  coro__actor__types_8h__dep__incl.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.tex
example/: echo.cpp
include/: coro_actor_client.h  coro_actor_reply.h  coro_actor_types.h
src/: coro_actor_client.cpp
